Add user login using OTP completed

--- a/user/templates/user/homepage.html
+++ b/user/templates/user/homepage.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Homepage</title>
 </head>
 <body>
-    <h1>Welcome, {%  %}</h1>
+
 </body>
 </html>
