--- a/user/templates/user/otp.html
+++ b/user/templates/user/otp.html
@@ -13,7 +13,7 @@
             {% csrf_token %}
             <label for="otp">OTP:</label>
             <input type="text" name="otp" required>
-            <input type="submit" value="otp">
+            <input type="submit" value="Submit">
         </form>
     </div>
 </body>
