--- a/user/templates/user/cart.html
+++ b/user/templates/user/cart.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-    {{ product_id }}
+    {% block cart %}
+        {% for item in user.cart.items.all %}
+            <h1>{{ item.itemName }}</h1>
+        {% endfor %}
+        <h1><strong>Delivery Charge: </strong>{{ user.cart.deliveryCharge }}</h1>
+        <h1><strong>Total Price: </strong>{{ user.cart.totalPrice }}</h1>
+    {% endblock cart %}
 </body>
 </html>
