--- a/user/templates/user/homepage.html
+++ b/user/templates/user/homepage.html
@@ -32,7 +32,7 @@
                 <p><strong>Item in Stock:</strong> {{ item.itemQuantity }}</p>
                 <p><strong>Item Description:</strong></p>
                 <p>{{ item.itemDescription|linebreaks }}</p>
-                <button id="{{ item.itemID }}" class="button">Add to Cart</button>
+                <button id="{{ item.itemID }}" class="button" name="add-to-cart">Add to Cart</button>
                 <hr>
             {% endfor %}
         {% endblock showItems %}
@@ -43,8 +43,10 @@
 <script type="text/javascript">
     $(document).ready(function() {
         $("button").click(function(event) {
-            console.log(event.target.id);
-            location.href = "http://127.0.0.1:8000/cart/?product=" + event.target.id;
+            if (event.target.name === "add-to-cart") {
+                console.log(event.target.id);
+                location.href = "http://127.0.0.1:8000/cart/?product=" + event.target.id;
+            }
         });
     });
 </script>
