--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -1,3 +1,5 @@
+{%  load static %}
+
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 
@@ -6,9 +8,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Login Page</title>
+         <link rel="stylesheet" href="/static/style.css"/>
+
 </head>
 <body>
-    <div>
+    <div class="logincss">
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form|crispy }}
