Add @login_required where necessary, Add 'clear cart' button

--- a/user/templates/user/cart.html
+++ b/user/templates/user/cart.html
@@ -56,7 +56,7 @@
 
 
 </section>
-
+<a href="http://127.0.0.1:8000/clear_cart/">Clear Cart</a>
   {% comment %} <!--{% block cart %}
         {% for item in user.cart.items.all %}
             <h1>{{ item.itemName }}</h1>
