--- a/user/templates/user/homepage.html
+++ b/user/templates/user/homepage.html
@@ -15,7 +15,7 @@
     </div>
     <div class="homepagealign">
      <a href="http://127.0.0.1:8000/cart">Cart</a>
-             <a href="http://127.0.0.1:8000/login">Login</a>
+             <a href="http://127.0.0.1:8000/accounts/login">Login</a>
 
 
     </div>
